# colmap-scripts

./: .gitignore  PNG2YUV.py  clean.py  colmap2dibr.py  config.py  convert_dense_to_depth.py  convert_raw_to_RT.py  depth_estimate_with_known_posture.py  depth_estimate_without_posture.py  extract_videos.py  fill_holes.py  gen_dibr_prams.py  post_processing.py  synthesis_background.py  update_instrinsic.py
synthesis_background/: CMakeLists.txt  main.cpp  run.py
